--- a/style.css
+++ b/style.css
@@ -2,13 +2,7 @@ body {
     font-family: sans-serif;
     background-color: #ffffff;
   }
-  
-  .file-upload {
-    background-color: #ffffff;
-    width: 600px;
-    margin: 0 auto;
-  }
-  
+
   .file-upload-btn {
     width: 100%;
     margin: 0;
@@ -206,7 +200,7 @@ body {
 .file-upload {
   margin: 0 auto;
   padding: 10% 10%;
-  width: 900px;
+  width: 75%; 
   border-radius: 10px;
   border: solid 1.5px #f6f7fa;
   background-color: #f6f7fa;
